PLotting dual sing set - need legends
