# controllers/singularity-set.go
@@ -14,31 +14,36 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func singularitySetData(parameters *parameters.Parameters, numPoints uint) ([]impact.Impact, []impact.Impact, string) {
+type SingularitySetResult struct {
+	singularity []impact.Impact
+	dual []impact.Impact
+}
+
+func singularitySetData(parameters *parameters.Parameters, numPoints uint) (*SingularitySetResult, string) {
 	impactMap, errMap := dynamics.NewImpactMap(*parameters)
 
 	if errMap != nil {
-		return nil, nil, errMap.Error()
+		return &SingularitySetResult{singularity: nil, dual: nil}, errMap.Error()
 	}
 
 	singularity, dual := impactMap.SingularitySet(numPoints)
 	
-	return singularity, dual, ""
+	return &SingularitySetResult{singularity: singularity, dual: dual}, ""
 }
 
 func singularitySetImage(parameters *parameters.Parameters, numPoints uint) string {
-	singularity, _, errString := singularitySetData(parameters, numPoints)
+	result, errString := singularitySetData(parameters, numPoints)
 
-	if singularity == nil {
+	if result.singularity == nil || result.dual == nil {
 		return errString
 	} else {
-		return charts.ImpactMapPlot(*parameters, singularity, 0.0, 0.0).Name()
+		return charts.ImpactMapPlot(*parameters, [][]impact.Impact{result.singularity,result.dual}, 0.0, 0.0).Name()
 	}
 }
 
 // PostSingularitySetImage godoc
-// @Summary Return scatter plot of impacts which map to zero velocity impacts for a specified set of parameters
-// @Description Return scatter plot of impacts which map to zero velocity impacts for a specified set of parameters
+// @Summary Return scatter plot of impacts which map to and from zero velocity impacts for a specified set of parameters
+// @Description Return scatter plot of impacts which map to and from zero velocity impacts for a specified set of parameters
 // @ID post-singularity-set-image
 // @Accept x-www-form-urlencoded
 // @Produce  png
@@ -46,7 +51,7 @@ func singularitySetImage(parameters *parameters.Parameters, numPoints uint) stri
 // @Param offset formData number true "Obstacle offset from origin"
 // @Param r formData number true "Coefficient of restitution" minimum(0) maximum(1)
 // @Param maxPeriods formData int false "Number of periods without an impact after which the algorithm will report 'long excursions'" default(100)
-// @Param numPoints formData int false "Number of iterations of impact map" default(10000)
+// @Param numPoints formData int false "Number of impacts to map" default(10000)
 // @Success 200 {object} dynamics.IterationResult
 // @Failure 400 {object} string "Invalid parameters"
 // @Router /singularity-set/image/ [post]
@@ -69,8 +74,41 @@ func PostSingularitySetImage(c *gin.Context) {
 	}
 }
 
+// PostSingularitySetData godoc
+// @Summary Return impacts which map to and from zero velocity impacts for a specified set of parameters
+// @Description Return impacts which map to and from zero velocity impacts for a specified set of parameters
+// @ID post-singularity-set-data
+// @Accept x-www-form-urlencoded
+// @Produce json
+// @Param frequency formData number true "Forcing frequency" minimum(0)
+// @Param offset formData number true "Obstacle offset from origin"
+// @Param r formData number true "Coefficient of restitution" minimum(0) maximum(1)
+// @Param maxPeriods formData int false "Number of periods without an impact after which the algorithm will report 'long excursions'" default(100)
+// @Param numPoints formData int false "Number of impacts to map" default(10000)
+// @Success 200 {object} dynamics.IterationResult
+// @Failure 400 {object} string "Invalid parameters"
+// @Router /singularity-set/data/ [post]
+func PostSingularitySetData(c *gin.Context) {
+	// TODO: NOT YET WORKING
+	numPoints, parameters, errorString := SingularitySetInputsFromPost(c)
+
+	if parameters == nil || len(errorString) > 0 {
+        log.Print(errorString)
+		c.JSON(400, errorString)
+	} else {
+		result, errString := singularitySetData(parameters, numPoints)
+
+		if result.singularity == nil || result.dual == nil {
+			log.Print(errString)
+			c.JSON(400, fmt.Sprintf("Failed to complete singularity set - %s", errString))
+		} else {
+			c.JSON(200, gin.H{"message": result,})
+		}
+	}
+}
+
 func AddSingularitySetControllers (r *gin.Engine) {
 	iteration := r.Group("/api/singularity-set")
-	// iteration.POST("/data",  PostSingularitySetData)
+	iteration.POST("/data",  PostSingularitySetData)
 	iteration.POST("/image",  PostSingularitySetImage)
 }
